Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- intranet-importer: Fixed import of images with capital letters in extensions


Changes 16.07.20
---------------------------------------------------------------------------------------
NODES
- Fixed removal of users by admins (Trello #1298)


Changes 16.07.04
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.3 (Trello #1272)
- Reviewed embed support in kses to let contributors add Picasa web albums (Trello #1182)
- BuddyPress Group Email Subscription: Converted to submodule and updated to 3.6.1 (Trello #1042)
- buddypress-docs: Suggest labels when adding new documents (Trello #1228)
- BuddyPress: Converted to submodule and upgraded to version 2.5.3 (Trello #1057)
- BuddyPress: Added option to disable direct post into general wall (Trello #1264)
- enllacos-educatius: Replaced Ministry of Education link
- add-to-any: Upgraded module to version 1.6.17. Added more options for xtecadmin (Trello #1031)
- wordpress-php-info: Upgraded from version 14.12 to version 15
- widget-visibility-without-jetpack: Added option to show content only in selected groups of buddypress (Trello #1262)
- Translated menu option "Add Media" to catalan (Trello #1254)
- mu-common: Deactivate pingback to avoid attacks to other sites (Trello #1275)
- mu-common: Removed fix for post thumbnails broken due to upgrading to WP 4.4. No longer necessary in WP 4.5
- mu-common: Check script label to only allow Gallery.io scripts to contributor users rol (Trello #1182)
- mu-common: Allow shortcodes into taxonomy description, like categories or tags (Trello #1263)